2009-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by "Womo":
	bug #25241: AT90USB162, AT90USB82 device support patch for avrdude-5.5
	(also: bug #21745: AT90USBxx2 support)
	* avrdude.conf.in (AT90USB162, AT90USB82): new device support.

2009-02-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Evangelos Arkalis:
	patch #6069: Atmel AT89ISP Cable
	* avrdude.conf.in (89isp): new programmer support.

2009-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bob Paddock:
	patch #6748: ATTiny88 Config
	* avrdude.conf.in (ATtiny88): new device support.

2009-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Mark Litwack:
	patch #6261: avrdude won't use dragon/debugwire to write a file
	to eeprom
	* jtagmkII.c (jtagmkII_paged_write): when in debugWire mode,
	implement a paged write to EEPROM as a series of byte writes.

2009-02-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Janos Sallai:
	patch #6542: paged_load fails on the MIB510 programming board
	* stk500.c: Add a workaround for the different signon sequence on
	MIB510 programmers.

2009-02-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in: Add the ATmega128RFA1.
	* avrdude.1: document the addition of ATmega128RFA1.
	* doc/avrdude.texi: (Ditto.)
